# unpaper

./: constants.h  imageprocess.c  meson.build  tools.c  unpaper.c  unpaper.h
api/: compile_job_parameters.py  default-job-parameters.textpb  original-variables.txt  temp-process.txt  unpaper.proto
lib/: libunpaper.c  libunpaper.h
